// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Group /> children renders 1`] = `
<fieldset
  id="fieldset-1"
>
  Children
</fieldset>
`;

exports[`<Group /> error renders 1`] = `
<fieldset
  aria-describedby="fieldset-1-error"
  id="fieldset-1"
>
  <span
    id="fieldset-1-error"
    role="alert"
  >
    Error
  </span>
</fieldset>
`;

exports[`<Group /> help renders 1`] = `
<fieldset
  id="fieldset-1"
>
  <span>
    Help
  </span>
</fieldset>
`;

exports[`<Group /> legend renders 1`] = `
<fieldset
  id="fieldset-1"
>
  <legend>
    Legend
  </legend>
</fieldset>
`;

exports[`<Group /> renders 1`] = `
<fieldset
  id="fieldset-1"
/>
`;
